--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,5 +30,6 @@ jobs:
       - name: Run linter
         # Run Linter
         run: make lint
+      - name: Run tests
         # Run Tests
         run: make test
