--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,16 +30,13 @@ jobs:
       - name: Run linter
         # Run Linter
         run: make lint
-      - name: Run tests
-        # Run Tests
-        run: make test
         # Publish code coverage on Code Climate
         # https://github.com/paambaati/codeclimate-action
       - name: Run test & publish code coverage
         uses: paambaati/codeclimate-action@v2.6.0
         # Add Code Climate secret key
         env:
-          SECRET: ${{ secrets.SECRET }}
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: make test-coverage
           coverageLocations: ${{github.workplace}}/build/logs/clover.xml:clover
