--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         ]
     },
     "require": {
-        "docopt/docopt": "^1.0",
+        "docopt/docopt": "^1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.4",
         "squizlabs/php_codesniffer": "^3.5"
     }
 }
