--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,38 +1,24 @@
-# Name of workflow
 name: PHP CI
-
-# Trigger the workflow on push or pull request
 on:
-  - push
-  - pull_request
-
+  push:
+    branches: [ master ]
+ 
 jobs:
   build:
-
-    # The type of machine to run the job on
     runs-on: ubuntu-latest
-
     steps:
-        # Check-out repository under GitHub workspace
-        # https://github.com/actions/checkout
       - uses: actions/checkout@v2
-        # Step's name
-      - name: Setup PHP
-        # Action gives to setup the PHP environment to test application
-        # https://github.com/shivammathur/setup-php
+      - name: Setup PHP 
         uses: shivammathur/setup-php@v2
         with:
           # Specify the PHP version
           php-version: '7.4'
-      - name: Install
-        # Install project
+        
+      - name: install package
         run: make install
-      - name: Run linter
-        # Run Linter
+      - name: run linter
         run: make lint
-        # Publish code coverage on Code Climate
-        # https://github.com/paambaati/codeclimate-action
-      - name: Run test & publish code coverage
+      - name: run test & publish code coverage
         uses: paambaati/codeclimate-action@v2.6.0
         # Add Code Climate secret key
         env:
