--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
     "bin": ["bin/gendiff"],
     "autoload": {
         "files": [
-            "src/differ.php"
+            "src/Differ.php",
+            "src/Parsers.php"
         ]
     },
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "symfony/yaml": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
